--- a/css/styles.css
+++ b/css/styles.css
@@ -10,25 +10,30 @@ h1 {
 	text-shadow: 5px -5px 5px #960, 5px 5px 5px #970, -5px 5px 5px #950;
 	padding: 16px;
 	border: 10px groove #900;
+	font-variant: small-caps;
 }
 
 h2 {
 	font: 26px/.5em  "Arial Black", Gadget, sans-serif;
 	font-weight: bolder;
 	margin-bottom: 10px;
-	margin-left: 50px;
 	line-height: 1em;
 	margin-top: -10px;
 	border-bottom: 2px #900 solid;
 	border-left: 2px #900 solid;
+	border-top: 2px #960 solid;
+	border-right: 2px #960 solid;
 	border-radius: 60%;
 	padding: 20px;
+	background-color: rgba(204,204,204,.1);
+	text-align: center;
 }
 
 p {
 	font-family: 'Josefin Sans', sans-serif;
 	font-size: 16px;	
 	direction: rtl;
+	font-weight: bolder;
 }
 
 p.right {
@@ -58,7 +63,7 @@ font-weight: bold;
 	padding: 10px;
 	text-align: start;
 	margin-top: 10px;
-border: 4px #000 solid;
+border: 4px #000 outset;
 color: #000;
 border-radius: 15%;
 }
@@ -80,8 +85,12 @@ border: 4px #900 solid;
 color: #900;
 }
 
-section {
-	
+.quote {
+	font-size: 24px;
+	font-weight: 900;
+	font-variant: small-caps;
+	text-align: center;
+	color: #900;
 }
 
 .bg {
